Migrate back stateless self managed plugin
From the public repository. So as to fully form it here inside
the private repository and ultimately move it, ideally with
git history preserved, to the public repository.

Relates